# Heraclitus-Forge

./: .gitignore  Heraclitu- Monetization.md  Operational-Fact.md  README.md  cke.py  connector_postgresql.py  dashboard.py  forge_ai.py  forge_compiler.py  heraclitus_db.py  heraclitus_fabric.py  hql_engine.py  inserir.py  plataforma.md  projeto.md  projeto1.md  requirements.txt  resumo.md  runner_engine.py  spec-ingesta-conector.md
rust/: Cargo.toml  README.md
rust/schema/: operational_fact.fbs
rust/src/: db.rs  fact.rs  fbfact.rs  hql.rs  lib.rs  main.rs  raft.rs  runner.rs
