[package]
name = "heraclitus-forge"
version = "0.1.0"
edition = "2021"
description = "Heraclitus Runner + HeraclitusDB — runtime nativo line-rate (port Rust)"

[lib]
name = "heraclitus"
path = "src/lib.rs"

[[bin]]
name = "connector_postgresql"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "cluster_demo"
path = "src/bin/cluster_demo.rs"

[[bin]]
name = "gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "hql"
path = "src/bin/hql.rs"

[[bin]]
name = "probe"
path = "src/bin/probe.rs"

[[bin]]
name = "fabric"
path = "src/bin/fabric.rs"

[[bin]]
name = "coverage"
path = "src/bin/coverage.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
blake3 = "1"
uuid = { version = "1", features = ["v7"] }
# Gateway de ingestao (backend do dashboard) — stack Rust recomendada
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
axum = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
